--- a/display_picture/index.html
+++ b/display_picture/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dog</title>
+        <link rel="shortcut icon" href="#" />
     </head>
     <body>
         <div id="parent"></div>
