--- a/display_picture/static/index.html
+++ b/display_picture/static/index.html
@@ -7,25 +7,31 @@
     <body>
         <div id="parent"></div>
         <script type="module">
+            import init, {init_quiz} from '../pkg/display_picture.js';
+
             async function loadQuizzes() {
                 console.log("loadQuizzes started");
                 const response = await fetch('../src/questions.json');
                 const data = await response.json();
+
+                const wasmModule = await import('../pkg/display_picture.js');
+                window.wasm = wasmModule;
                 
                 // WebAssemblyの関数にデータを渡す
                 // WebAssemblyインスタンスのインスタンスを保持していると仮定
                 if (window.wasm) {
-                    window.wasm.load_quizzes_from_json(data);
+                    wasm.load_quizzes_from_json(data);
+                }
+                else
+                {
+                    console.log("not window");
                 }
             }
 
-            import init, {run, print_quizzes_status} from '../pkg/display_picture.js';
-            import {initializeQuizzes, printQuizzes} from "../src/quiz.js";
-
             async function main() {
                 await init();
-                loadQuizzes();
-                print_quizzes_status();
+                await loadQuizzes();
+                init_quiz();
             }
 
             main();
